--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule ".vim/bundle/vim-scratch"]
 	path = .vim/bundle/vim-scratch
 	url = git@github.com:kana/vim-scratch.git
+[submodule ".vim/bundle/vim-markdown"]
+	path = .vim/bundle/vim-markdown
+	url = git@github.com:tpope/vim-markdown.git
