--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,9 @@
 [submodule ".vim/bundle/haskellmode-vim"]
 	path = .vim/bundle/haskellmode-vim
 	url = git@github.com:lukerandall/haskellmode-vim.git
+[submodule "vaxe"]
+	path = vaxe
+	url = git@github.com:jdonaldson/vaxe.git
+[submodule ".vim/bundle/vaxe"]
+	path = .vim/bundle/vaxe
+	url = git@github.com:jdonaldson/vaxe.git
